src/test/resources/lox/error/result_early_return_top_level.lox
clock()!?; // expect error: Can't use !? in top-level code.